<resources>
    <string name="app_name">God Of Burguer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="insumos">Insumos</string>
    <string name="lanches">Lanches</string>
    <string name="usuarios">Usuarios</string>
    <string name="fornecedores">Fornecedores</string>
    <string name="clientes">Clientes</string>
    <string name="indicadores">Indicadores</string>
    <string name="satisfacao">Satisfação</string>
    <string name="atendimento_cliente">Atendimento ao Cliente</string>
    <string name="qualidade">Qualidade</string>
    <string name="qualidade_lanche">Qualidade do lanche servido</string>
    <string name="agilidade">Agilidade</string>
    <string name="tempo_entrega">Tempo de entrega dos pedidos</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="sair">Sair</string>
    <string name="nome">Nome</string>
    <string name="informe_nome">Informe o nome</string>
    <string name="gravar">Gravar</string>
    <string name="cancelar">Cancelar</string>
    <string name="informe_o_endereco">Informe o endereço</string>
    <string name="endereco">Endereço</string>
    <string name="informe_o_email">Informe o email</string>
    <string name="email">Email</string>
    <string name="informe_o_telefone">Informe o telefone</string>
    <string name="telefone">"Telefone"</string>
    <string name="validate_senha">Informe a senha</string>
    <string name="validate_user">Informe o usuário</string>
    <string name="informe_endereco">Informe o endereço</string>
    <string name="informe_telefone">Informe o telefone</string>
    <string name="informe_descricao">Informe a descrição</string>
    <string name="informe_tipo">Informe o tipo</string>
    <string name="informe_email">Informe o email</string>
    <string name="valor">Valor</string>
    <string name="informe_valor">Informe o valor</string>
    <string name="informe_login">Informe o login</string>
    <string name="informe_senha">Informe a senha</string>
    <string name="descricao">Descrição</string>
    <string name="id">ID</string>
    <string name="escolha_fornecedor">Escolha o fornecedor</string>
    <string name="tipo_lanche">Tipos de Lanche</string>
    <string name="selecione_insumo">Informe o insumo</string>
</resources>
