<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tipo_lanche" />

                        <Spinner
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:id="@+id/spnTipoLanche"
                            android:textAlignment="center"
                            android:layout_marginLeft="30dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textDirection="rtl"
                            android:dropDownWidth="match_parent"
                            android:spinnerMode="dropdown"
                            style="@style/SpinnerStyle">
                        </Spinner>

                    </LinearLayout>


                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nome"/>

                    <EditText
                        android:id="@+id/editNomeLanche"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/informe_nome"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/valor"/>

                    <EditText
                        android:id="@+id/editValorLanche"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/informe_valor"
                        android:inputType="numberDecimal"/>


                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/insumos"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.7dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/colorPrimary">
                    </View>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.2">

                            <AutoCompleteTextView
                                android:id="@+id/atcNomeInsumoLanche"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/selecione_insumo" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="0.8"
                            android:gravity="center">
                            <Button
                                android:id="@+id/btnAddInsumoLanche"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                style="@style/ButtonMore"/>
                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>
        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <android.support.v7.widget.RecyclerView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/recyclerViewInsumosLanche"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGravarLanche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/gravar" />

            <Button
                android:id="@+id/btnCancelarCadLanche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/cancelar"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
